<resources>
    <string name="app_name">MovieTimes</string>
    <string name="app_version">Version 1.0</string>
    <string-array name="app_description">
      <item> Welcome to MovieTimes - Discover the latest movies and TV series with MovieTimes, providing an extensive collection of entertainment at your fingertips!</item>
      <item>Features:</item>
      <item>   - Explore Movies and TV Series, Detailed Information,</item>
      <item>   - Personalized Recommendations, Wishlist and Search,</item>
      <item>   - TV Episodes.</item>
      <item>Discover the world of cinema and TV with MovieTimes, whether you are a movie buff, TV show enthusiast, or seeking entertainment recommendations!</item>
    </string-array>
    <string name="developer_info">Developed By: Kailas Mantri</string>

    <string name="contact_info">movietimesdev@gmail.com</string>


    <!-- TODO: ImageView ContentDescription-->
    <string name="movie_type_title">Genres List</string>
    <string name="carouselImages">carousel Slider Image</string>
    <string name="description">itemImageTitle</string>
    <string name="mediaPlay">Play_Icon</string>

    <!-- TODO: MainActivity contents -->
    <string name="title">MovieTimes</string>
    <string name="countryCode">+91</string>
    <string name="cellNumber">Mobile Number</string>
    <string name="proceed">Proceed</string>
    <string name="otherLogin">Try some Other Login Methods</string>
    <string name="googleSignIn">Sign In With Google</string>

    <!--TODO: Navigation Drawer-->
    <string name="nav">Nav Icon</string>
    <string name="openDrawer">Open Navigation Drawer</string>
    <string name="closeDrawer">Close Navigation Drawer</string>

    <!-- TODO: BottomSheetDialog contents -->
    <string name="otpVerification">OTP Verification</string>
    <string name="closeDialog">Close / Clear</string>
    <string name="resendOtp">Resend OTP</string>
    <string name="verifyOtp">Verify OTP</string>

    <!-- TODO: Fragments view contents-->
    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_series">Series</string>
    <string name="menu_search">Search</string>

    <!-- TODO: Movie Types contents-->
    <string name="nowPlayingM">Now Playing Movies</string>
    <string name="topRatedM">Top Rated Movies</string>
    <string name="popularM">Popular Movies</string>
    <string name="trendingM">Trending Movies</string>

    <!-- TODO: Series/TV Types contents-->
    <string name="upComingS">UpComing Series</string>
    <string name="topRatedS">Top Rated Series</string>
    <string name="popularS">Popular Series</string>

    <!-- TODO: Search Fragment contents -->
    <string name="search_text">Search by Movie / Series Name</string>
    <string name="recentSearch">Recent Searches</string>

    <!-- TODO: Movie Details Activity contents -->
    <string name="wishList_add">  Add to Wishlist</string>
    <string name="wishlist_remove">Remove from Wishlist</string>
    <string name="releaseDate">Release Date : </string>
    <string name="availableOn">Available On</string>
    <string name="languages">Languages</string>
    <string name="trailerTitle">Teasers and Trailers</string>
    <string name="describe">Description</string>
    <string name="cast">Cast and Crew</string>
    <string name="starCastImage">cast Images</string>
    <string name="castName">Model Name</string>
    <string name="rollName">RollName</string>
    <string name="recommended_movie_title">Recommended Movies</string>

    <!-- TODO: Series Details Activity contents -->
    <string name="series_title">Series Title</string>
    <string name="series_date">series date</string>
    <string name="episodes">Episodes</string>
    <string name="seasonNo">Season </string>
    <string name="recommended_series_title">Recommended Series</string>

    <!-- TODO: Navigation Menu contents-->
    <string name="store">Store</string>
    <string name="menu_wishlist">WishList</string>
    <string name="menu_setting">Settings</string>
    <string name="community">Community</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="txtThanksFeedback">Thank you for your feedback!</string>
    <string name="txtEmail">Email:</string>
    <string name="editTextEmail">Enter your email</string>
    <string name="editTextFeedback">Enter your feedback</string>
    <string name="menu_share">share</string>
    <string name="menu_logout">Sign out</string>

</resources>
