<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_views">

    <group
        android:id="@+id/menu_group"
        android:checkableBehavior="single">

        <item
            android:title="@string/menu_home"
            android:id="@+id/menu_Home"
            android:icon="@drawable/menu_home"/>

        <item
            android:title="@string/store"
            android:id="@+id/menu_store"
            android:icon="@drawable/menu_store"/>

        <item
            android:title="@string/menu_wishlist"
            android:id="@+id/wishList"
            android:icon="@drawable/wishlist_add" />

    </group>

    <item
        android:title="@string/community" >
        <menu>

            <item
                android:title="@string/menu_setting"
                android:id="@+id/menu_setting"
                android:icon="@drawable/menu_settings" />

            <item
                android:title="@string/menu_feedback"
                android:id="@+id/feedback"
                android:icon="@drawable/menu_feedback" />

            <item
                android:title="@string/menu_about"
                android:id="@+id/aboutMenu"
                android:icon="@drawable/menu_about" />

            <item
                android:title="@string/menu_share"
                android:id="@+id/shareApp"
                android:icon="@drawable/menu_share" />

            <item
                android:title="@string/menu_logout"
                android:id="@+id/signOut"
                android:icon="@drawable/menu_logout" />

        </menu>
    </item>
</menu>