<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity"
    tools:context=".activity.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black">

        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:drawablePadding="25dp"
            android:text="@string/menu_about"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:drawableStartCompat="@drawable/arrow_back" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="16sp">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appLogo"
            android:layout_centerHorizontal="true"
            android:paddingTop="16sp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName"
            android:layout_centerHorizontal="true"
            android:paddingTop="8sp"
            android:text="@string/app_version"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <TextView
            android:id="@+id/appDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appVersion"
            android:layout_centerHorizontal="true"
            android:paddingTop="8sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <TextView
            android:id="@+id/developerInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appDescription"
            android:layout_centerHorizontal="true"
            android:paddingTop="16sp"
            android:text="@string/developer_info"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/developerInfo"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:text="@string/contact_info"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    </RelativeLayout>

</RelativeLayout>