<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/seriesImages"
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:background="@drawable/bg_border_round"
        android:contentDescription="@string/description"
        android:scaleType="fitXY"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_launcher_foreground" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/seriesImages"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/series_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/series_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/series_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/series_Title"
            android:layout_marginBottom="8sp"
            android:text="@string/series_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:id="@+id/seriesDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/series_date"
            android:maxLines="5"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/white" />
        
    </RelativeLayout>

</RelativeLayout>