<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/list_card_item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#19FFFFFF"
        app:cardCornerRadius="10sp"
        app:cardElevation="2sp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card">

            <ImageView
                android:id="@+id/backdropItem"
                android:layout_width="145dp"
                android:layout_height="90dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_border_round"
                android:contentDescription="@string/description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/titleItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/backdropItem"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/releaseItemDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleItem"
                android:layout_toEndOf="@id/backdropItem"
                android:text="@string/releaseDate"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>