<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="130sp"
    android:layout_height="wrap_content"
    android:id="@+id/castRecycler"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8sp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:background="@drawable/rounded_borders" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/castModelLayer">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:id="@+id/starCastImage"
                android:contentDescription="@string/starCastImage"
                android:src="@drawable/ic_launcher_foreground" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:paddingBottom="6sp"
            android:background="@drawable/bg_shadow_gradient"
            android:layout_alignBottom="@id/castModelLayer" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/castName"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/realName"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rollName"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/rollName"
                android:layout_below="@id/realName"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>