<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trailerRecycler"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="8sp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/media_poster_block"
            android:layout_width="160dp"
            android:layout_height="100sp"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/mediaPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/starCastImage"
                android:scaleType="fitXY" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/play_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/mediaPlay"
                    android:src="@drawable/media_play" />

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/episode_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/media_poster_block"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:text="@string/episodes"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/episode_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/episode_name"
            android:layout_toEndOf="@id/media_poster_block"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/episodes"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>